--- a/package.json
+++ b/package.json
@@ -31,7 +31,21 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.4",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
+  },
+  "lint-staged": {
+    "*.(ts,tsx)": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm run build",
+      "pre-push": "lint-staged && npm run build"
+    }
   }
 }
